# advent_of_code

./: .gitignore  README.md  new_day.sh  pyproject.toml  run_day.py
2016/day_01/: answer.py  input_sample
2016/day_06/: answer.py
2016/day_08/: answer.py
2016/day_12/: answer.py
2018/day_24/: answer.py
2019/day_01/: answer.py
2019/day_02/: answer.py
2019/day_03/: answer.py
2019/day_04/: answer.py
2019/day_05/: answer.py
2019/day_06/: answer.py
2019/day_07/: answer.py  input_sample
2019/day_08/: answer.py  input_sample
2019/day_09/: answer.py  input_sample
2019/day_10/: answer.py
2019/day_11/: answer.py
2019/day_12/: answer.py
2019/day_13/: answer.py
2019/day_14/: answer.py
2019/day_15/: answer.py
2019/day_16/: answer.py  input_sample
2019/day_17/: answer.py
2019/day_18/: answer.py  input  input_sample
2020/day_01/: answer.py
2022/: run_day.py
2022/day_01/: answer.py
2022/day_02/: answer.py
2022/day_03/: answer.py
2022/day_04/: answer.py
2022/day_05/: answer.py
2022/day_06/: answer.py
2022/day_07/: answer.py
2022/day_08/: answer.py
2022/day_09/: answer.py
2022/day_10/: answer.py
2022/day_11/: answer.py
2022/day_12/: answer.py
2022/day_13/: answer.py
2022/day_14/: answer.py
2022/day_15/: answer.py
2022/day_16/: answer-try1.py  answer.py
2022/day_17/: answer.py
2022/day_18/: answer.py
2022/day_19/: answer.py
2022/day_20/: README.md  answer.py
2022/day_21/: answer.py
2022/day_22/: README.md  answer.py
2022/day_23/: answer.py
2022/day_24/: answer.py
2022/day_25/: answer.py
2023/day_01/: answer.py
2023/day_02/: answer.py
2023/day_03/: answer.py
2023/day_04/: answer.py
2023/day_05/: answer.py
2023/day_06/: answer.py
(+63 files in other folders)
