[project]
name = "advent-of-code"
version = "0.1.0"
description = "sandbox for Advent of Code"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sympy>=1.13.3",
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
sympy = "^1.11.1"

[tool.poetry.group.dev.dependencies]
pylint = "^2.15.7"
ropevim = "^0.8.1"
bpython = "^0.23"
pudb = ">=2022.1.3"
virtualenvwrapper = "^4.8.4"

[tool.black]
line-length = 80
merge-issues = true
workers = 4
ignore-missing-extends = false

[tool.pylint.messages_control]
max-line-length = 80
disable = "C0301, C0114, C0115, C0116, C0103, W0613"  # mainly about docstrings

[tool.pydocstyle]
ignore = "D100, D101, D102, D103, D105, D107"  # no docstrings

[dependency-groups]
dev = [
    "pudb>=2024.1.3",
    "ropevim>=0.8.1",
    "ruff>=0.8.6",
]
